# nk-infra

./: .ansible-lint  .gitignore  .gitmodules  .yamllint.yml  CLAUDE.md  Makefile  README.md  ansible.cfg  hello.py  hosts.yml  pyproject.toml  requirements.txt  requirements.yml  site.yml
.github/actions/setup-project/: action.yml
.github/workflows/: ci.yml  deploy-beget.yml  deploy-prod.yml  deploy-test.yml  lint.yml
beget/: hosts.yml  site.yml
beget/stacks/: backend.yml  site-infra.yml
beget/vars/: secrets.yml  ssh_accounts.yml
group_vars/: en_swarm.yml  ru_swarm.yml
keys/: ci.pub  cloudflare-origin-server.cert  cloudflare-origin-server.key  cloudflared_cert.pem  cloudflared_tunnel_credentials.json  infra.pub
prod/: hosts.yml  site.yml
prod/vars/: ssh_accounts.yml
roles/common/handlers/: main.yml
roles/common/meta/: main.yml
roles/common/tasks/: 00_hostname.yml  00_packages.yml  01_packages.yml  01_sudo.yml  02_sudo.yml  03_accounts.yml  03_firewall.yml  04_firewall.yml  main.yml
roles/docker/tasks/: main.yml
roles/pg_master/handlers/: main.yml
roles/pg_master/tasks/: 00_install.yml  01_accounts.yml  (+1 more)
stacks/: app-site.yml  app.yml  cloudflared.yml  hello-world.yml  site-infra.yml
stacks/en/: hello_world.yml
test/: hosts.yml  site.yml
test/stacks/: backend.yml  site-infra.yml
test/vars/: vault.yml
vars/: credentials.yml  main.yml  secrets.yml  ssh_accounts.yml
xray/freedom/: config.json.j2  secrets.yml
xray/nl/: config.json.j2  secrets.yml
xray/router/: config.json.j2  secrets.yml
xray/ru/: config.json.j2  secrets.yml
(+35 files in other folders)
