[project]
name = "nk-infra"
version = "0.1.0"
description = "nk vless playbook"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    # Dev dependencies
    # While these dependencies are not required to run playbooks,
    # they are still used in production CI/CD pipelines to lint and validate them.
    # Feel free to move them to [dependency-groups.dev] if you want to separate them.
    "yamllint>=1.35.1",
    "ansible-lint>=24.10.0",
    "ansible>=11.5.0",
]

[tool.uv]
# The reason: ansible-lint is not compatible with Windows, try with WSL please
environments = ["platform_system != 'Windows'"]
